# api-performance-tests

./: .flake8  .gitignore  .pre-commit-config.yaml  .sourcery.yaml  Dockerfile  DockerfileBench  DockerfileFrameworks.jinja2  DockerfileFrameworks.tpl  Makefile  README.md  analyze.py  build.sh  cli.py  gunicorn.config.py  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  run-simple.sh  run.sh  run_app.sh  test.sh
.github/: CODEOWNERS
.github/workflows/: ci.yml
analysis/: analyzer.py  pyproject.toml
asgi_bench/: __main__.py  build.py  cli.py  results.py  runner.py  spec.py  types.py  util.py
blacksheep/: main.py
fastapi/: main.py  pyproject.toml
frameworks/: __init__.py  blacksheep_app.py  data.py  fastapi_app.py  framework_tests.py  litestar_app.py  quart_app.py  requirements-fastapi.txt  requirements-sanic.txt  sanic_app.py  starlette_app.py  starlite_app.py  test.py  test_frameworks.py
results/: blacksheep-async-json-abc-1.json  blacksheep-async-json-abc-2.json  blacksheep-async-json-mixed-params-def?first=abc-1.json  blacksheep-async-json-mixed-params-def?first=abc-2.json  blacksheep-async-json-no-params-1.json  blacksheep-async-json-no-params-2.json  blacksheep-async-json-query-param?first=abc-1.json  blacksheep-async-json-query-param?first=abc-2.json  blacksheep-async-plaintext-abc-1.json  blacksheep-async-plaintext-abc-2.json  blacksheep-async-plaintext-mixed-params-def?first=abc-1.json  blacksheep-async-plaintext-mixed-params-def?first=abc-2.json  blacksheep-async-plaintext-no-params-1.json  blacksheep-async-plaintext-no-params-2.json  blacksheep-async-plaintext-query-param?first=abc-1.json  blacksheep-async-plaintext-query-param?first=abc-2.json  blacksheep-sync-json-abc-1.json  blacksheep-sync-json-abc-2.json  blacksheep-sync-json-mixed-params-def?first=abc-1.json  blacksheep-sync-json-mixed-params-def?first=abc-2.json  blacksheep-sync-json-no-params-1.json  blacksheep-sync-json-no-params-2.json  blacksheep-sync-json-query-param?first=abc-1.json  blacksheep-sync-json-query-param?first=abc-2.json  blacksheep-sync-plaintext-abc-1.json  blacksheep-sync-plaintext-abc-2.json  blacksheep-sync-plaintext-mixed-params-def?first=abc-1.json  blacksheep-sync-plaintext-mixed-params-def?first=abc-2.json  blacksheep-sync-plaintext-no-params-1.json  blacksheep-sync-plaintext-no-params-2.json  blacksheep-sync-plaintext-query-param?first=abc-1.json  blacksheep-sync-plaintext-query-param?first=abc-2.json  fastapi-1-1.json  fastapi-1-2.json  fastapi-1-3.json  fastapi-1-4.json  fastapi-async-json-abc-1.json  fastapi-async-json-abc-2.json  fastapi-async-json-abc-3.json  fastapi-async-json-abc-4.json  (+582 more)
sanic/: main.py
starlette/: main.py
starlite/: main.py  pyproject.toml
starlite_api_bench/: build.py  cli.py  context.py  run.py  runner.py  spec.py  types.py
templates/: DockerfileFrameworks.jinja2  results.html.jinja2  results.md.jinja2
test_data/: 100B  100B.txt  100K  100K.json  100K.txt  10K  10K.json  10K.txt  1K  1K.json  1K.txt  1M  1M.json  1M.txt  500K  500K.json  500K.txt  50K  FILE_UPLOAD_1K  FILE_UPLOAD_1K_HEADERS.json  FORM_URLENCODED_1K  FORM_URLENCODED_1K_HEADERS.json  MULTIPART_1K  MULTIPART_HEADERS.json  __init__.py  objects.py  person_100x5.json  person_500x3.json  person_50x2.json  persons_100.json  persons_50.json  persons_500.json  random_10k.json  random_2k.json  random_450k.json  text_6k  text_70k
tests/: test_frameworks.py  test_types.py
