[tool.poetry]
name = "asgi_bench"
version = "0.1.0"
description = "Benchmarks for Python ASGI frameworks"
authors = ["Na'aman Hirschfeld <nhirschfeld@gmail.com>", "Janek Nouvertné <j.a.nouvertne@posteo.de>"]

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "*"
seaborn = "*"
pandas = "*"
rich = "*"
click = "*"
docker = "*"
starlite = { version = "*", optional = true}
starlette = { version = "*", optional = true }
fastapi = { version = "*", optional = true }
blacksheep = { version = "*", optional = true }
sanic = {extras = ["ext"], version = "^22.9.1", optional = true}
sanic-testing = { version = "*", optional = true }
pyyaml = "*"
httpx = "*"
uvloop = "*"
anyio = "*"
jinja2 = "^3.1.2"
uvicorn = "^0.20.0"

[tool.poetry.extras]
test = ["starlite", "starlette", "fastapi", "blacksheep", "sanic", "sanic-testing"]

[tool.poetry.scripts]
bench = "asgi_bench.cli:cli"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pycln]
all = true
