[tool.poetry]
name = "asgi_bench"
version = "0.1.0"
description = "Benchmarks for Python ASGI frameworks"
authors = ["Na'aman Hirschfeld <nhirschfeld@gmail.com>", "Janek Nouvertné <j.a.nouvertne@posteo.de>"]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "*"
rich = "*"
click = "*"
docker = "*"
pyyaml = "*"
httpx = "*"
uvloop = "*"
anyio = "*"
jinja2 = "^3.1.2"
uvicorn = "^0.20.0"
pydantic = "^1.10.2"
plotly = "^5.11.0"
kaleido = "0.2.1"

sanic = {extras = ["ext"], version = "^22.12.0", optional = true}
blacksheep = {version = "^1.2.10", optional = true}
starlette = {version = "^0.25.0", optional = true}
fastapi = {version = "^0.92.0", optional = true}
starlite = { version = ">=2.0.0alpha1", optional = true }
python-multipart = {version = "^0.0.6", optional = true}
quart = {version = "^0.18.3", optional = true}

[tool.poetry.extras]
test = ["starlite", "starlette", "fastapi", "blacksheep", "sanic", "python-multipart", "quart"]

[tool.poetry.scripts]
bench = "asgi_bench.cli:cli"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pycln]
all = true
