[tool.poetry]
name = "starlite-stress-test"
version = "0.1.0"
description = ""
authors = ["Na'aman Hirschfeld <nhirschfeld@gmail.com>"]
license = "None"

[tool.poetry.dependencies]
python = "^3.10"
starlite = "*"
uvicorn = "*"
gunicorn = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
